functions/kube-router/demo/networkpolicy/denyPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  #namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
