functions/kube-router/demo/networkpolicy/labelPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx
#  namespace: production
spec:
  podSelector: {}
#    matchLabels:
#      run: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
